modify the code

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <h1>adarsh_new_commiy</h1>
   <h1>Deploying the website from Lokesh's local machine</h1>
   hello
-  it worked finnaly.
+  it worked finnaly...
 </body>
 </html>
