add the new line

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
   <h1>Deploying the website from Lokesh's local machine</h1>
   hello
   it worked finnaly.
+  new line added to this file.
 </body>
 </html>
