add the new line

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <h1>done every this is good</h1>
   <h1>new commit</h1>
   <h1>new commit after updating the pull request</h1>
-  <h1>adarsh_new_commiy</h1>
+  <h1>Lokesh new commit</h1>
   <h1>Deploying the website from Lokesh's local machine</h1>
   hello
   it worked finnaly.
