update the codein 19th line

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   it worked finnaly.
   Moodified 18th line added to this file.
   Updated 19th line
+  updated nginx server path
 </body>
 </html>
