update the codein 19th line

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   Moodified 18th line added to this file.
   Updated 19th line
   updated nginx server path
+  updated nginx server path in 21st line
 </body>
 </html>
