modified the 23rd line and updated a new code with the name autodeploy

--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <h1>new commit after updating the pull request</h1>
   <h1>Lokesh new commit</h1>
   <h1>Deploying the website from Lokesh's local machine</h1>
-  hello
-  it worked finnaly.
-  Moodified 18th line added to this file.
-  Updated 19th line
-  updated nginx server path
-  updated nginx server path in 21st line
-  updated new line
+  <h2>hello<h2></h2>
+  <h2>it worked finnaly.</h2>
+  <h2>18th line added to this file.</h2>
+  </h2>19th line<h2>
+  <h2>updated nginx server path<h2>
+  </h2> nginx server path in 21st line</h2>
+  <h2>updated new line<h2>
+  <h2>updated new line at 12:43<h2>
 </body>
 </html>
