code modify at 14:31

--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <h2>updated new line at 14:37 21/08/2023<h2>
   <h2>updated new line at 23:39 21/08/23<h2>
   update at 23:45
+  update at 14:30 23/08/23
 </body>
 </html>
